Changes to interface

--- a/django_p/test_project/templates/base.html
+++ b/django_p/test_project/templates/base.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>AHAHAHAHHAHAHAHAHHAHAHAH! GET RICKROLLED BI00000000000000thhhhhhhh! </h1>
+    <h1>Never gonna give you up!</h1>
+
+    <a href="{% url 'home' %}">Home</a>
+
 </body>
 </html>
