--- a/django_p/test_project/templates/home_page.html
+++ b/django_p/test_project/templates/home_page.html
@@ -1,21 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>My Django Project Homepage</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}" type= "text/css" >
     </head>
 <body>
-    <h1>Welcome to My Django Project!</h1>
 
-    <nav>
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'welcome' %}">Welcome (Rick Page)</a></li>
-            <li><a href="{% url 'list_users' %}">List Users</a></li>
-        </ul>
-    </nav>
-
-    <p>This is the main content of your homepage. You can add any information or calls to action here.</p>
+    <div class="login">
+	<h1>Login</h1>
+    <form method="post">
+    	<input type="text" name="u" placeholder="Username" required="required" />
+        <input type="password" name="p" placeholder="Password" required="required" />
+        <button type="submit" class="btn btn-primary btn-block btn-large">Let me in!</button>
+    </form>
+</div>
 
 </body>
 </html>
